--- a/templates/profile.html
+++ b/templates/profile.html
@@ -46,7 +46,7 @@
   </style>
 {% endblock head %}
 {% block content %}
-  <div class="container mx-auto px-4 mt-8">
+  <div class="container mx-auto px-4 my-8">
     <div class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-duration="800">
       <!-- Profile Card -->
       <div class="bg-neutral-900/70 backdrop-blur-md shadow-inset-white rounded-2xl overflow-visible">
